--- a/templates/contactform.html
+++ b/templates/contactform.html
@@ -89,14 +89,14 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-live-support"></i>
                     <h5>Emergency Helpline</h5>
-                     +91 974568 8850
+                     +91 97456 88850
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-support-faq"></i>
                     <h5>Email Support</h5>
-                    support@karunyaeyehospital.org
+                    karunyaeyecare@gmail.com
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
