--- a/templates/doctor.html
+++ b/templates/doctor.html
@@ -42,7 +42,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor1.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor1.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -56,7 +56,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor2.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor2.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -70,7 +70,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor3.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor3.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -84,7 +84,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor4.png" alt="doctor-image" class="img-fluid w-100"  style="height: 250px;"/>
+                <img src="static/images/team/doctor4.png" alt="doctor-image" class="img-fluid w-100"  style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -99,7 +99,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor5.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor5.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -113,7 +113,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/premi.jpeg" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/premi.jpeg" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -127,7 +127,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor7.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor7.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -141,7 +141,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor8.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor8.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -158,7 +158,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor9.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor9.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
@@ -172,7 +172,7 @@
           <div class="position-relative doctor-inner-box">
             <div class="doctor-profile">
               <div class="doctor-img">
-                <img src="static/images/team/doctor11.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px;"/>
+                <img src="static/images/team/doctor11.png" alt="doctor-image" class="img-fluid w-100" style="height: 250px; border-radius: 30px;"/>
               </div>
             </div>
             <div class="content mt-3">
