--- a/templates/base.html
+++ b/templates/base.html
@@ -40,10 +40,12 @@
             <div class="col-lg-6">
               <ul class="top-bar-info list-inline-item pl-0 mb-0">
                 <li class="list-inline-item">
-                  <a href="mailto:karunyaeyecare@gmail.com"><i class="icofont-support-faq mr-2"></i>karunyaeyecare@gmail.com</a>
+                  <a href="mailto:karunyaeyehospital@gmail.com"><i class="icofont-support-faq mr-2"></i>karunyaeyehospital@gmail.com</a>
                 </li>
                 <li class="list-inline-item">
-                  <i class="icofont-location-pin mr-2"></i>Adoor , Kerala
+                  <i class="icofont-location-pin ml-2"></i> Adoor 
+                  <i class="icofont-location-pin ml-2"></i> Pandalam
+                  <i class="icofont-location-pin ml-2"></i> Kottarakara
                 </li>
               </ul>
             </div>
@@ -146,7 +148,7 @@
         <div class="row mb-2">
           <div class="col-lg-4 mr-auto col-sm-6">
             <div class="widget mb-5 mb-lg-0">
-              <p>Providing world-class eye care with advanced t echnology and compassionate service to restore and enhance vision.</p>
+              <p>Providing world-class eye care with advanced technology and compassionate service to restore and enhance vision.</p>
               <ul class="list-inline footer-socials mt-4">
                 <li class="list-inline-item">
                   <a href="#"><i class="icofont-facebook"></i></a>
@@ -206,7 +208,7 @@
                   <i class="icofont-email mr-3"></i>
                   <span class="h6 mb-0">24/7 Support Available</span>
                 </div>
-                <h4 class="mt-2"><a href="mailto:karunyaeyecare@gmail.com">karunyaeyecare@gmail.com</a></h4>
+                <h4 class="mt-2"><a href="mailto:karunyaeyehospital@gmail.com">karunyaeyehospital@gmail.com</a></h4>
               </div>
               <div class="footer-contact-block">
                 <div class="icon d-flex align-items-center">
