--- a/templates/contactform.html
+++ b/templates/contactform.html
@@ -89,6 +89,8 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-live-support"></i>
                     <h5>Emergency Helpline</h5>
+                    <br>
+                    <br>
                      +91 97456 88850
                 </div>
             </div>
@@ -96,14 +98,18 @@
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-support-faq"></i>
                     <h5>Email Support</h5>
-                    karunyaeyecare@gmail.com
+                    <br>
+                    <br>
+                    karunyaeyehospital@gmail.com
                 </div>
             </div>
             <div class="col-lg-4 col-sm-6 col-md-6">
                 <div class="contact-block mb-4 mb-lg-0">
                     <i class="icofont-location-pin"></i>
                     <h5>Our Location</h5>
-                     Adoor , Kerala
+                     ADOOR <br>
+                     PANDALAM <br>
+                     KOTTARAKKARA <br>
                 </div>
             </div>
         </div>
