--- a/templates/centres.html
+++ b/templates/centres.html
@@ -27,7 +27,7 @@
           <div>
             <div class="icon d-flex align-items-center">
               <i class="ri-map-2-line"></i>
-              <h4 class="mt-3 mb-3 ms-2 text-center">ADOOR</h4>
+              <h4 class="mt-3 mb-3 ms-2 text-center"> ADOOR</h4>
             </div>
             <div class="content">
               <p>
@@ -53,7 +53,7 @@
           <div>
             <div class="icon d-flex align-items-center">
               <i class="ri-map-2-line"></i>
-              <h4 class="mt-3 mb-3 ms-2 text-center">PANDALAM</h4>
+              <h4 class="mt-3 mb-3 ms-2 text-center"> PANDALAM</h4>
             </div>
             <div class="content">
               <p>
@@ -65,7 +65,7 @@
                   <i class="ri-phone-line"></i> 04734-256586<br />
                   <i class="ri-smartphone-line"></i> 9526988851 / 9562988851<br />
                   <br />
-                  <i class="ri-mail-line"></i> karunyaeyehospitalpdm@gmail.com
+                  <i class="ri-mail-line"></i> karunyaeyehospital@gmail.com
                 </b>
               </p>
             </div>
@@ -79,7 +79,7 @@
           <div>
             <div class="icon d-flex align-items-center">
               <i class="ri-map-2-line"></i>
-              <h4 class="mt-3 mb-3 ms-2 text-center">KOTTARAKKARA</h4>
+              <h4 class="mt-3 mb-3 ms-2 text-center"> KOTTARAKKARA</h4>
             </div>
             <div class="content">
               <p>
@@ -91,7 +91,7 @@
                   <br />
                   <i class="ri-smartphone-line"></i> 9567298854 / 9746655851 / 9746642761<br />
                   <br />
-                  <i class="ri-mail-line"></i> karunyaeyehospitalktr@gmail.com
+                  <i class="ri-mail-line"></i> karunyaeyehospital@gmail.com
                 </b>
               </p>
             </div>
