--- a/templates/insurances.html
+++ b/templates/insurances.html
@@ -29,7 +29,7 @@
               <thead class="thead-dark">
                 <tr>
                   <th>S.No</th>
-                  <th>Insurance Company Name</th>
+                  <th>Insurance Company/TPA Name</th>
                 </tr>
               </thead>
               <tbody>
