--- a/templates/centres.html
+++ b/templates/centres.html
@@ -65,7 +65,7 @@
                   <i class="ri-phone-line"></i> 04734-256586<br />
                   <i class="ri-smartphone-line"></i> 9526988851 / 9562988851<br />
                   <br />
-                  <i class="ri-mail-line"></i> karunyaeyehospital@gmail.com
+                  <i class="ri-mail-line"></i> karunyaeyehospitalpdm@gmail.com
                 </b>
               </p>
             </div>
@@ -91,7 +91,7 @@
                   <br />
                   <i class="ri-smartphone-line"></i> 9567298854 / 9746655851 / 9746642761<br />
                   <br />
-                  <i class="ri-mail-line"></i> karunyaeyehospital@gmail.com
+                  <i class="ri-mail-line"></i> karunyaeyehospitalktr@gmail.com
                 </b>
               </p>
             </div>
