--- a/templates/index.html
+++ b/templates/index.html
@@ -376,47 +376,53 @@ Home | Karunya Eye Hospital
   <div class="container">
     <div class="row clients-logo flex-nowrap flex-md-wrap overflow-x-auto overflow-md-visible pb-3">
       <!-- Client Items -->
-      <div class="col-lg-3 col-md-3 col-8">
-        <!-- Adjusted column size -->
-        <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+      <div class="col-lg-3 col-md-3 col-8 d-flex">
+        <div
+          class="client-thumb text-center d-flex flex-column align-items-center justify-content-between w-100 p-3 border rounded"
+          style="height: 200px;">
           <div class="logo-container">
-            <img src="static/images/echs.png" alt="ECHS" class="img-fluid" />
+            <img src="static/images/echs.png" alt="ECHS" class="img-fluid" style="max-height: 80px;" />
           </div>
-          <div class="logo-label fw-500">ECHS</div>
+          <div class="logo-label fw-500 mt-2">ECHS</div>
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-3 col-8">
-        <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+      <div class="col-lg-3 col-md-3 col-8 d-flex">
+        <div
+          class="client-thumb text-center d-flex flex-column align-items-center justify-content-between w-100 p-3 border rounded"
+          style="height: 200px;">
           <div class="logo-container">
-            <img src="static/images/cghs.png" alt="CGHS" class="img-fluid" />
+            <img src="static/images/cghs.png" alt="CGHS" class="img-fluid" style="max-height: 80px;" />
           </div>
-          <br>
-          <div class="logo-label fw-500">CGHS</div>
+          <div class="logo-label fw-500 mt-2">CGHS</div>
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-3 col-8">
-        <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+      <div class="col-lg-3 col-md-3 col-8 d-flex">
+        <div
+          class="client-thumb text-center d-flex flex-column align-items-center justify-content-between w-100 p-3 border rounded"
+          style="height: 200px;">
           <div class="logo-container">
-            <img src="static/images/medisep.png" alt="MEDISEP" class="img-fluid" />
+            <img src="static/images/medisep.png" alt="MEDISEP" class="img-fluid" style="max-height: 80px;" />
           </div>
-          <br>
-          <div class="logo-label fw-500">MEDISEP</div>
+          <div class="logo-label fw-500 mt-2">MEDISEP</div>
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-3 col-8">
-        <div class="client-thumb text-center d-flex flex-column align-items-center h-200">
+      <div class="col-lg-3 col-md-3 col-8 d-flex">
+        <div
+          class="client-thumb text-center d-flex flex-column align-items-center justify-content-between w-100 p-3 border rounded"
+          style="height: 200px;">
           <div class="logo-container">
-            <img src="static/images/kasp.png" alt="KASP" class="img-fluid" />
+            <img src="static/images/kasp.png" alt="KASP" class="img-fluid" style="max-height: 80px;" />
           </div>
-          <div class="logo-label fw-500">KASP</div>
+          <div class="logo-label fw-500 mt-2">KASP</div>
         </div>
       </div>
     </div>
   </div>
 </section>
+
 
 <section class="section testimonial-2 gray-bg">
   <div class="container">
